required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fixed swig zoomRectangle() method: the maxy in the rect object have to be < miny value (#3286)

- Fix crash with GRID layers with no classes (#3352)

- Remove "legacy" raster support, all raster rendering via GDAL now.

- Very preliminary render plugin support for raster rendering. (RFC 54)

- support correct MIME type output for WFS 1.1.0 (#3295)

- add WMS 1.3.0 LayerLimit support (#3284)

- fix WFS 1.1.0 exception attributes (#3301)

- add more useful error message when query file extension test fails (#3302)

- s/gml:null/gml:Null for empty WFS GetFeature responses (#3299)

- Support metatiling and buffers in mode=tile (#3323)

- Enhance error messages in msGetTruetypeTextBBox() (#3314)

- Report parsing errors in INCUDEd files using the line number within the file (#3329)

- Avoid memory error when building SQL bbox (#3324)

- Reproject rectangles as polygons to get datelin wrapping (#3179)

- Add support for the WMS capabilities items AuthorityURL, Identifier (#3251)

- Added support to write a null shape in a shape file. (#3277)

- Apply ON_MISSING_DATA to zero-length WMS client calls (#2785, #3243)

- PHP/Mapscript: added labelCacheMember object and mapObj::getLabel() method (#1794)

- Add shplabel tag support in templates (#3241)

- Bumped GEOS requirement to version 3.0+ (#3215)

- Fixed memory leak related to templates (#2996)

- Added support of 44xx gtypes in oracle spatial driver (#2830)

- Fixed curl proxy auth support for http connections (#571)

- PHP/MapScript: removed deprecated class properties (#2170)

- Fixed OGR datasource double free (#3261)
 